syntax = "proto3";

option csharp_namespace = "FinancialService";

package financial;

service FinancialService {
  rpc Deposit (DepositRequest) returns (DepositResponse);
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
  rpc Test (TestRequest) returns (TestRequest);
}

message TestRequest {
  string testou = 1;
}

message Result {
  bool isSuccess = 1;
  string errorMessage = 2;
  string errorType = 3;
}

message DepositRequest {
  string user_email = 1;
  int64 amount = 2;
  string currency = 3;
  string idempotency_key = 4;
}

message DepositResponse {
  string transaction_id = 1;
  string status = 2;
  Result result = 3;
}

message TransferRequest {
  string from_account_email = 1;
  string to_account_email = 2;
  int64 amount = 3;
  string currency = 4;
  string idempotency_key = 5;
  string metadata = 6;
}

message TransferResponse {
  string transaction_id = 1;
  string status = 2;
  bool is_idempotent_replay = 3;
  Result result = 4;
}

message GetBalanceRequest {
  string user_email = 1;
}

message GetBalanceResponse {
  string user_email = 1;
  int64 balance_in_cents = 2;
  string currency = 3;
  Result result = 4;
} 